@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.10467 2005/06/26 15:00:41 recht Exp $
+$NetBSD: CHANGES,v 1.10468 2005/06/26 15:24:13 reinoud Exp $
 
 Changes to the packages collection and infrastructure in 2005:
 
@@ -3028,3 +3028,5 @@ Changes to the packages collection and infrastructure in 2005:
 	Updated math/p5-Spreadsheet-ParseExcel to 0.2603 [wiz 2005-06-26]
 	Updated multimedia/gst-plugins to 0.8.9nb1 [wiz 2005-06-26]
 	Updated devel/tla to 1.3.3 [recht 2005-06-26]
+	Updated misc/udfclient to 0.4.9 [reinoud 2006-06-26]
+
